# chat

./: .gitignore  Makefile  README.md  chat.code-workspace  sample-nginx.conf
.github/workflows/: codeql-analysis.yml
deploy/: README.md
deploy/docs/: configuring-playbook-bridge-heisenbridge.md  configuring-playbook-prometheus-grafana.md  installing.md  maintenance-upgrading-services.md
libs/olm/: .editorconfig  .gitignore  .gitlab-ci.yml
server/bug-report/: .gitignore  README.md  logserver.go  rageshake.sample.yaml  rageshake.yaml
server/content-scanner/: README.md  av_pickled_decryption.key  package-lock.json  setup.sh
server/matrix-authentication-service/: config.yaml
server/mjolnir/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  tsconfig.json  tslint.json
server/pantalaimon/: README.md
server/sydent/: .dockerignore  .gitignore  README.md
server/sygnal/: .gitignore  README.md  RELEASING.md  sygnal.yaml
server/to/: .editorconfig  .eslintrc.js  .gitignore  README.md  index.html  package.json
server/tube/: .gitignore  .gitpod.yml  README.md  SECURITY.md  package-lock.json  package.json  server.ts
server/user-verification-service/: .dockerignore  .env  .env.default  .eslintrc  .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  setup.sh
shared/: README.md
shared/android-Flow/: README.md  gradle.properties  instance-build.gradle
shared/android-Tube/: .gitignore  (+1 more)
shared/desktop/seshat/seshat-node/native/: Cargo.toml
shared/desktop/seshat/seshat-node/native/src/: lib.rs  tasks.rs  utils.rs
(+11383 files in other folders)
